Fix donation modal z-index.

--- a/static/home/css/style.css
+++ b/static/home/css/style.css
@@ -570,7 +570,7 @@ a:hover{
 	position: fixed;
 	top: 0;
 	left: 0;
-	z-index: 2;
+	z-index: 3;
 	width: 100%;
 	height: 100%;
 	background-color: rgba(0,0,0,0.4);
